# progettoAI

./: .gitignore  LLM_constraints.py  SmartScheduler.py  SmartScheduler_Workers_Preferences.txt  calcola_fairness.py  config.py  drafting_agent.py  excel_calendar.py  fairness.py  generatore_di_vincoli.py  hard_constaint_verifier.py  hard_constraint_verifier.py  main.py  main2.py  ollama_parser.py  preferences.json  preferences1.json  preferenze.txt  prova2.txt  pyproject.toml  schedule_draft_model.py  scheduler_graph.py  util.py  worker_agent.py
