[project]
name = "progetto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.4",
    "langchain-google-genai>=4.2.4",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.2",
    "langchain-openrouter>=0.2.3",
    "ortools>=9.15.6755",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ruff>=0.15.15",
]
